--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -4,7 +4,6 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -14,8 +13,14 @@ jobs:
         with:
           go-version: 1.18
 
-      - name: Build
+      - name: Run all the tests
+        run: go test -v ./...
+
+      - name: Build to a binary
         run: go build -v ./...
 
-      - name: Test
-        run: go test -v ./...
+      - name: Build the docker image
+        run: ./build.sh
+        shell: bash
+
+
